force-app/main/default/objects/MEDDPICC_Config__c/MEDDPICC_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls MEDDPICC enforcement mode. When Full_MEDDPICC_Enabled__c is TRUE, all 8 MEDDPICC components are required at defined stage gates (Phase 2). When FALSE (default), Light MEDDPICC is enforced — Identify Pain required at Stage 2, Decision Criteria required at Stage 3. Toggle activated by Revenue Ops based on sales adoption feedback.</description>
    <label>MEDDPICC Config</label>
</CustomObject>