force-app/main/default/objects/MEDDPICC_Config__c/fields/Alert_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Alert_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master on/off switch for MEDDPICC stall alerts. Default TRUE.</description>
    <label>Alert Enabled</label>
    <type>Checkbox</type>
</CustomField>