force-app/main/default/objects/MEDDPICC_Config__c/fields/Full_MEDDPICC_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Full_MEDDPICC_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE, all 8 MEDDPICC components are enforced at stage gates. When FALSE (default Phase 1), Light MEDDPICC is active — only Identify Pain and Decision Criteria are required. Flip to TRUE in Phase 2 once sales team adoption is confirmed by Revenue Ops.</description>
    <label>Full MEDDPICC Enabled</label>
    <type>Checkbox</type>
</CustomField>