force-app/main/default/objects/MEDDPICC_Config__c/fields/Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Score_Threshold__c</fullName>
    <defaultValue>8</defaultValue>
    <description>MEDDPICC score below which the stall alert fires. Default 8 out of 16.</description>
    <label>Score Threshold</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>