force-app/main/default/objects/MEDDPICC_Config__c/fields/Stage_Stall_Days__c.field-meta.xml
<CustomField>
    <fullName>Stage_Stall_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Days in same stage before deal is considered stalled. Default 14.</description>
    <label>Stage Stall Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>